# mcp_massive

./: .gitignore  .mcpbignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.web.yml  docker-compose.yml  entrypoint.py  justfile  manifest.json  pyproject.toml
.github/workflows/: ci.yml
src/mcp_massive/: __init__.py  constants.py  formatters.py  functions.py  index.py  server.py  store.py
src/mcp_polygon/: server.py
tests/: test_benzinga_news.py  test_formatters.py  test_functions.py  test_index.py  test_server.py  test_ssl.py  test_store.py
tests/fixtures/: aggs.md  llms-full.txt  llms-partial.txt  llms.txt
tests/integration/: conftest.py  mock_api_server.py  mock_llms_txt.py  responses.py  test_error_handling.py  test_http_transport.py  test_inprocess.py  test_stdio_transport.py  test_workflows.py
