[project]
name = "mcp_massive"
version = "0.8.6"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "certifi>=2026.2.25",
    "httpx>=0.28.0",
    "numpy>=2.4.2",
    "bm25s>=0.2.0",
    "snowballstemmer>=2.2.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.0",
    "sqlglot>=28.10.0",
]
[[project.authors]]
name = "Massive"
email = "support@massive.com"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "rust-just>=1.42.4",
]

[tool.uv]
constraint-dependencies = [
    "PyJWT>=2.12.0",
]

[project.scripts]
mcp_massive = "mcp_massive:main"
