[project]
name = "mcp_massive"
version = "0.8.8"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "certifi>=2026.2.25",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "sqlglot>=30.4.0"
]
[[project.authors]]
name = "Massive"
email = "support@massive.com"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "rust-just>=1.42.4",
]

[tool.uv]
constraint-dependencies = [
    "PyJWT>=2.12.0",
    "Pygments>=2.20.0",
    "cryptography>=46.0.7",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that hit real external services",
]
addopts = "-m 'not e2e'"

[project.scripts]
mcp_massive = "mcp_massive:main"
